--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-font-face": "^0.2.1",
+    "react-scripts": "1.1.5",
+    "url-loader": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
