--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.5.2",
     "react-font-face": "^0.2.1",
     "react-scripts": "1.1.5",
+    "really-smooth-scroll": "^2.1.1",
     "url-loader": "^1.1.1"
   },
   "scripts": {
